--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
+@font-face {
+  font-family: "Involve";
+  src: url("/fonts/Involve/Involve-Medium.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+/* @font-face {
+  font-family: "Involve";
+  src: url("/fonts/Involve/Involve-Bold.woff2") format("woff2"),
+    url("/fonts/Involve/Involve-Bold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+} */
+
 * {
   margin: 0;
   padding: 0;
